test_Push_CleanArchitecture

--- a/BackEnd_SmartHouseThesis/Infrastructure/Infrastructure.csproj
+++ b/BackEnd_SmartHouseThesis/Infrastructure/Infrastructure.csproj
@@ -10,4 +10,10 @@
     <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DAO\" />
+    <Folder Include="Mapper\" />
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
 </Project>
