--- a/BackEnd_SmartHouseThesis/Application/Application.csproj
+++ b/BackEnd_SmartHouseThesis/Application/Application.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -8,6 +8,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Ultils\" />
+    <Folder Include="Services\" />
+    <Folder Include="UseCase\" />
   </ItemGroup>
 
 </Project>
