--- a/BackEnd_SmartHouseThesis/BackEnd_SmartHouseThesis/appsettings.json
+++ b/BackEnd_SmartHouseThesis/BackEnd_SmartHouseThesis/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SmartHomeDB": "Server=(local);Uid=sa;Pwd=12345;Database=ISHE_Database"
+  }
 }
