Contract, Enum , Dependency

--- a/BackEnd_SmartHouseThesis/BackEnd_SmartHouseThesis/appsettings.json
+++ b/BackEnd_SmartHouseThesis/BackEnd_SmartHouseThesis/appsettings.json
@@ -8,5 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "SmartHomeDB": "Server=(local);Uid=sa;Pwd=12345;Database=ISHE_Database"
-  }
+  },
+  "JwtIssuer": "ISHE",
+  "JwtAudience": "ISHE",
+  "JwtSecurityKey": "SmartHomeISHE",
+  "JwtExpiryInDays": 1
 }
