--- a/BackEnd_SmartHouseThesis/Infrastructure/Infrastructure.csproj
+++ b/BackEnd_SmartHouseThesis/Infrastructure/Infrastructure.csproj
@@ -12,10 +12,10 @@
 
   <ItemGroup>
     <Folder Include="DAO\" />
-    <Folder Include="Mapper\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.23" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.23">
       <PrivateAssets>all</PrivateAssets>
