--- a/BackEnd_SmartHouseThesis/BackEnd_SmartHouseThesis/appsettings.json
+++ b/BackEnd_SmartHouseThesis/BackEnd_SmartHouseThesis/appsettings.json
@@ -9,8 +9,10 @@
   "ConnectionStrings": {
     "SmartHomeDB": "Server=(local);Uid=sa;Pwd=12345;Database=ISHE_Database"
   },
-  "JwtIssuer": "ISHE",
-  "JwtAudience": "ISHE",
-  "JwtSecurityKey": "SmartHomeISHE",
-  "JwtExpiryInDays": 1
+  "Jwt": {
+    "Issuer": "ISHE",
+    "Audience": "ISHE",
+    "Key": "SmartHomeISHE",
+    "JwtExpiryInDays": 1
+  }
 }
