SeedData Account, Device, Package Policy

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /BackEnd_SmartHouseThesis/BackEnd_SmartHouseThesis/bin/Debug/net6.0
 /BackEnd_SmartHouseThesis/Domain/bin/Debug/net6.0
 /BackEnd_SmartHouseThesis/Infrastructure/bin/Debug/net6.0
+/BackEnd_SmartHouseThesis/BackEnd_SmartHouseThesis/obj/Debug/net6.0
