Feat : config Authentication, Authorzie - process

--- a/BackEnd_SmartHouseThesis/BackEnd_SmartHouseThesis/appsettings.json
+++ b/BackEnd_SmartHouseThesis/BackEnd_SmartHouseThesis/appsettings.json
@@ -12,7 +12,7 @@
   "Jwt": {
     "Issuer": "ISHE",
     "Audience": "ISHE",
-    "Key": "SmartHomeISHE",
+    "Key": "SS590Z/hUu8cjD9w4W51xA==",
     "JwtExpiryInDays": 1
   }
 }
