--- a/BackEnd_SmartHouseThesis/Infrastructure/Infrastructure.csproj
+++ b/BackEnd_SmartHouseThesis/Infrastructure/Infrastructure.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Repositories\i4mct4yo.wrg~" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
