--- a/BackEnd_SmartHouseThesis/Infrastructure/Infrastructure.csproj
+++ b/BackEnd_SmartHouseThesis/Infrastructure/Infrastructure.csproj
@@ -7,15 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="DAO\**" />
+    <EmbeddedResource Remove="DAO\**" />
+    <None Remove="DAO\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="Repositories\i4mct4yo.wrg~" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="DAO\" />
   </ItemGroup>
 
   <ItemGroup>
