AccountService: Authenticate, GetAccounts, CreateAccount, GenerateJwtToken CloudStorageService: Upload, Delete, GetMediaLink CustomerService: Get, Create, UpdateCustomer, UploadAvatar OwnerService: Get, Create, UpdateOwner, UploadAvatar AccountController: GetAccounts AuthController: Authenticated CustomerController:  Get, Create, UpdateCustomer, UploadAvatar OwnerController: Get, Create, UpdateOwner, UploadAvatar Config Program.cs

--- a/BackEnd_SmartHouseThesis/ISHE_API/appsettings.json
+++ b/BackEnd_SmartHouseThesis/ISHE_API/appsettings.json
@@ -1,4 +1,24 @@
 {
+  "AppSetting": {
+    "SecretKey": "AuthenticationForIsheSystemAuthenticationForIsheeSystem",
+    "RefreshTokenSecret": "RefreshTokenForIsheeSystemRefreshTokenForIsheeSystem",
+    "Bucket": "smarthome-856d3.appspot.com",
+    "Folder": "attachments"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=SQL8004.site4now.net;Initial Catalog=db_aa455a_ishedb;User Id=db_aa455a_ishedb_admin;Password=thanhtu98"
+    //"DefaultConnection": "Server=TAN-TRUNG\\HAMMER;Database=SMART_HOME_DB;Persist Security Info=False;User ID=sa;Password=123456;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
+  },
+  "Firebase": {
+    "apiKey": "AIzaSyA7whJONp5a-D-Taxc5Hq3LqxO0RG0aDB0",
+    "authDomain": "smarthome-856d3.firebaseapp.com",
+    "projectId": "smarthome-856d3",
+    "storageBucket": "smarthome-856d3.appspot.com",
+    "messagingSenderId": "138230736587",
+    "appId": "1:138230736587:web:a78b467fb9d3d04aa25d4e",
+    "measurementId": "G-STRZ5HY3LB",
+    "JsonFilePath": "../ISHE_Utility/Helpers/CloudStorage/smarthome-856d3-firebase-adminsdk-88tdt-cc841847e7.json"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
