--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@
 /BackEnd_SmartHouseThesis/ISHE_Data/obj
 /BackEnd_SmartHouseThesis/ISHE_Service/obj
 /BackEnd_SmartHouseThesis/ISHE_Utility/obj
+/BackEnd_SmartHouseThesis/.vs/ProjectEvaluation
+/BackEnd_SmartHouseThesis/ISHE_Utility/bin/Debug/net6.0
+/BackEnd_SmartHouseThesis/ISHE_Data/bin/Debug/net6.0
+/BackEnd_SmartHouseThesis/ISHE_API/bin/Debug/net6.0
+/BackEnd_SmartHouseThesis/ISHE_Service/bin/Debug/net6.0
