--- a/BackEnd_SmartHouseThesis/ISHE_API/appsettings.json
+++ b/BackEnd_SmartHouseThesis/ISHE_API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=SQL8004.site4now.net;Initial Catalog=db_aa455a_ishedb;User Id=db_aa455a_ishedb_admin;Password=thanhtu98"
-    //"DefaultConnection": "Server=TAN-TRUNG\\HAMMER;Database=SMART_HOME_DB;Persist Security Info=False;User ID=sa;Password=123456;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
+    //"DefaultConnection": "Server=localhost;Uid=sa;Pwd=12345;Database=SMART_HOME_DB;Persist Security Info=False;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
   },
   "Firebase": {
     "apiKey": "AIzaSyA7whJONp5a-D-Taxc5Hq3LqxO0RG0aDB0",
