--- a/BackEnd_SmartHouseThesis/ISHE_API/appsettings.json
+++ b/BackEnd_SmartHouseThesis/ISHE_API/appsettings.json
@@ -3,10 +3,18 @@
     "SecretKey": "AuthenticationForIsheSystemAuthenticationForIsheeSystem",
     "RefreshTokenSecret": "RefreshTokenForIsheeSystemRefreshTokenForIsheeSystem",
     "Bucket": "smarthome-856d3.appspot.com",
-    "Folder": "attachments"
+    "Folder": "attachments",
+    "ZaloPay": {
+      "ZaloPayAppId": "2554",
+      "ZaloPayKey1": "sdngKKJmqEMzvh5QQcdD2A9XBSKUNaYn",
+      "ZaloPayKey2": "trMrHtvjo6myautxDUiAcYsVtaeQ8nhf",
+      "CreateOrderUrl": "https://sb-openapi.zalopay.vn/v2/create",
+      "QueryOrderUrl": "https://sb-openapi.zalopay.vn/v2/query",
+      "CallbackUrl": "https://phat-dat-store.azurewebsites.net/api/payments/zalopay-callback"
+    }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=SQL8004.site4now.net;Initial Catalog=db_aa455a_ishedb;User Id=db_aa455a_ishedb_admin;Password=thanhtu98"
+    "DefaultConnection": "Data Source=sql.bsite.net\\MSSQL2016;Initial Catalog=smarthouse_ISHE;User ID=smarthouse_ISHE;Password=thanhtu"
     //"DefaultConnection": "Server=localhost;Uid=sa;Pwd=12345;Database=SMART_HOME_DB;Persist Security Info=False;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
   },
   "Firebase": {
